# thestrat

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  FEATURE_SPEC.md  LICENSE.md  README.md  SCHEMA_FIX_SUMMARY.md  WARP.md  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  verify_schema.py
.github/: SUPPORT.md  dependabot.yml
.github/badges/: coverage.json
.github/workflows/: auto-close-issues.yml  ci.yml  coverage.yml  docs.yml  tests.yml
developer-guide/: index.html
developer-guide/contributing/: index.html
docs/: gen_ref_nav.py  get_version.py  hooks.py  index.md
docs/developer-guide/: contributing.md  index.md
docs/diagrams/: continuations-directional.drawio  continuations-inside-bar.drawio  pattern-anatomy-example.drawio  reversals-1bar-revstrat.drawio  reversals-2bar-revstrat.drawio  reversals-2bar.drawio  reversals-3-2-2.drawio  reversals-3-2.drawio  reversals-inside-bar.drawio  reversals-revstrat.drawio
docs/theme/: main.html
docs/user-guide/: asset-classes.md  configuration.md  dataframe-schema.md  examples.md  index.md  installation.md  pattern-terminology.md  precision.md  quickstart.md  signal-metadata.md
reference/: index.html
reference/SUMMARY/: index.html
reference/thestrat/: index.html
reference/thestrat/aggregation/: index.html
reference/thestrat/base/: index.html
reference/thestrat/factory/: index.html
reference/thestrat/indicators/: index.html
reference/thestrat/schemas/: index.html
reference/thestrat/signals/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: test_aggregation_accuracy.py  test_aggregator.py  test_classifier.py  test_i_thestrat.py  test_sessions.py  test_u_aggregation.py  test_u_aggregation_issue51.py  test_u_base.py  test_u_factory.py  test_u_indicators.py  test_u_precision.py  test_u_schemas.py  test_u_signals.py
tests/fixtures/signals/: README.md  generate_all_signals.py
tests/fixtures/signals/indicators/: signal_1_2d_2u_indicators.csv  signal_1_2u_2d_indicators.csv  signal_2d_1_2d_indicators.csv  signal_2d_1_2u_indicators.csv  signal_2d_2d_indicators.csv  signal_2d_2u_indicators.csv  signal_2u_1_2d_indicators.csv  signal_2u_1_2u_indicators.csv  signal_2u_2d_indicators.csv  signal_2u_2u_indicators.csv  signal_3_1_2d_indicators.csv  signal_3_1_2u_indicators.csv  signal_3_2d_2u_indicators.csv  signal_3_2d_indicators.csv  signal_3_2u_2d_indicators.csv  signal_3_2u_indicators.csv
tests/fixtures/signals/market/: signal_1_2d_2u_market.csv  signal_1_2u_2d_market.csv  signal_2d_1_2d_market.csv  signal_2d_1_2u_market.csv  signal_2d_2d_market.csv  signal_2d_2u_market.csv  signal_2u_1_2d_market.csv  signal_2u_1_2u_market.csv  signal_2u_2d_market.csv  signal_2u_2u_market.csv  signal_3_1_2d_market.csv  signal_3_1_2u_market.csv  signal_3_2d_2u_market.csv  signal_3_2d_market.csv  signal_3_2u_2d_market.csv  signal_3_2u_market.csv
tests/utils/: __init__.py  config_helpers.py  csv_signal_loader.py  pattern_data_factory.py  signal_validator.py  thestrat_data_utils.py
thestrat/: __init__.py  aggregation.py  aggregator.py  base.py  classifier.py  factory.py  indicators.py  precision.py  schemas.py  sessions.py  signals.py  types.py
user-guide/: index.html
user-guide/asset-classes/: index.html
user-guide/configuration/: index.html
user-guide/dataframe-schema/: index.html
user-guide/examples/: index.html
user-guide/installation/: index.html
user-guide/pattern-terminology/: index.html
user-guide/precision/: index.html
user-guide/quickstart/: index.html
user-guide/signal-metadata/: index.html
