[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thestrat"
version = "0.0.1a7"
description = "#TheStrat indicators and timeframe aggregation for financial market data"
authors = [
    {name = "Jason Lixfeld", email = "nominal_choroid0y@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Private :: Do Not Upload",
]
dependencies = [
    "polars[timezone]>=1.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "pytz>=2022.1",
    "pyarrow>=10.0.0",
    "pydantic>=2.9.0",
    "coverage[toml]>=7.10.6",
]

[project.urls]
"Homepage" = "https://github.com/jlixfeld/thestrat"
"Bug Tracker" = "https://github.com/jlixfeld/thestrat/issues"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=2.0",
]
dev = [
    "ruff==0.11.13",
]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "black>=22.0.0",  # For signature formatting
]


[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedClass = false
reportUnusedFunction = false
reportUnusedVariable = false
reportUntypedFunctionDecorator = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportOverlappingOverload = false
reportUninitializedInstanceVariable = false
reportArgumentType = false
reportAttributeAccessIssue = false

[dependency-groups]
dev = [
    "git-changelog>=2.6.2",
    "pytest>=8.4.2",
    "ruff>=0.11.13",
    "pre-commit>=3.0.0",
    "pyright>=1.1.405",
]
