[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thestrat"
version = "1.0.0"
description = "Vectorized OHLCV timeframe aggregation and Strat bar classification (Polars)"
authors = [
    {name = "Jason Lixfeld", email = "nominal_choroid0y@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Private :: Do Not Upload",
]
dependencies = [
    "polars[timezone]>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jlixfeld/thestrat"
"Bug Tracker" = "https://github.com/jlixfeld/thestrat/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
dev = [
    "ruff>=0.11.13",
    "pyright>=1.1.405",
]


[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["thestrat", "tests"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0",
    "ruff>=0.11.13",
    "pre-commit>=3.0.0",
    "pyright>=1.1.405",
]
